# Banking-Dataset

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 0.0-bpr-eda.ipynb
